# ros2_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/relbot_simulator/include/: colour_tracker.hpp  relbot_simulator.hpp  sequence_controller.hpp
install/relbot_simulator/lib/relbot_simulator/: colour_tracker  sequence_controller
install/relbot_simulator/share/relbot_simulator/: local_setup.sh  package.sh
install/ros_xeno_bridge/share/ros_xeno_bridge/: package.sh
install/xcontroller/share/xcontroller/: package.bash  package.zsh
install/xrf2_msgs/include/xrf2_msgs/xrf2_msgs/msg/detail/: ros2_xeno__struct.hpp  ros2_xeno__traits.hpp  ros2_xeno__type_support.c  xeno2_ros__struct.h  xeno2_ros__struct.hpp  xeno2_ros__traits.hpp
install/xrf2_msgs/local/lib/python3.10/dist-packages/xrf2_msgs-0.0.0-py3.10.egg-info/: SOURCES.txt
install/xrf2_msgs/local/lib/python3.10/dist-packages/xrf2_msgs/msg/: _ros2_xeno.py  _xeno2_ros_s.c
install/xrf2_msgs/share/ament_index/resource_index/parent_prefix_path/: xrf2_msgs
install/xrf2_msgs/share/xrf2_msgs/: package.sh
install/xrf2_msgs/share/xrf2_msgs/msg/: Ros2Xeno.idl  Ros2Xeno.msg  Xeno2Ros.idl
log/: latest_build  latest_list
src/relbot_simulator/: CMakeLists.txt
src/relbot_simulator/launch/: relbot_simulator.launch.py
src/relbot_simulator/src/: colour_tracker.cpp  relbot_simulator.cpp  sequence_controller.cpp
src/xcontroller/: CMakeLists.txt  README.md  main.cpp
src/xcontroller/20_sim_code/: test_LoopController.cpp
src/xcontroller/controller/: LoopController.cpp  LoopController.h  LoopController_tokens.xml
src/xcontroller/include/: TestNode.hpp  xcontroller.hpp
src/xcontroller/src/: .xcontroller.cpp.swp  TestNode.cpp  xcont_pratik.cpp  xcontroller.cpp
